welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: missing parameter type
    }else if (speed=>81){
              ^caughtSpeeding:8: error: type mismatch;
 found   : Unit
 required: Int
    }else if (speed=>81){
          ^caughtSpeeding:16: error: missing parameter type
    }else if (speed=>86){
              ^caughtSpeeding:16: error: type mismatch;
 found   : Unit
 required: Int
    }else if (speed=>86){
          ^